SUBDIRS = lout dw dlib dpip src doc dpid dpi test

dist_bin_SCRIPTS = dillo-install-hyphenation

EXTRA_DIST = README.md Doxyfile dillorc install-dpi-local d_size.h

sysconf_DATA = dillorc

desktopdir = $(datadir)/applications
desktop_DATA = dillo.desktop

appicon48dir = $(datadir)/icons/hicolor/48x48/apps/
appicon48_DATA = icons/48x48/dillo.png

appicon128dir = $(datadir)/icons/hicolor/128x128/apps/
appicon128_DATA = icons/128x128/dillo.png

EXTRA_DIST += $(desktop_DATA) $(appicon48_DATA) $(appicon128_DATA)
